force-app/main/default/objects/Consultation_Booking__c/Consultation_Booking__c.object-meta.xml
<CustomObject>
    <label>Consultation Booking</label>
    <nameField>
        <displayFormat>CONS-{0000}</displayFormat>
        <label>Consultation Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultation Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>