force-app/main/default/objects/Consultation_Booking__c/fields/Consultation_Date__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Date__c</fullName>
    <label>Consultation Date</label>
    <type>Date</type>
</CustomField>