force-app/main/default/objects/Consultation_Booking__c/fields/Consultation_Time__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Time__c</fullName>
    <label>Consultation Time</label>
    <type>DateTime</type>
</CustomField>