force-app/main/default/objects/Consultation_Booking__c/fields/Question_Problem__c.field-meta.xml
<CustomField>
    <fullName>Question_Problem__c</fullName>
    <label>Question / Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>