force-app/main/default/objects/Consultation_Booking__c/fields/Zodiac_Sign__c.field-meta.xml
<CustomField>
    <fullName>Zodiac_Sign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zodiac Sign</label>
    <referenceTo>Zodiac_Sign__c</referenceTo>
    <relationshipLabel>Consultation Bookings</relationshipLabel>
    <relationshipName>Consultation_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>