force-app/main/default/objects/Consultation_Booking__c/fields/Zodiac_Text__c.field-meta.xml
<CustomField>
    <fullName>Zodiac_Text__c</fullName>
    <label>Zodiac Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>