force-app/main/default/objects/Consultation_Booking__c/listViews/Completed_Consultations.listView-meta.xml
<ListView>
    <fullName>Completed_Consultations</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Consultation Done</value>
    </filters>
    <label>Completed Consultations</label>
</ListView>