force-app/main/default/objects/Consultation_Booking__c/listViews/Contacted.listView-meta.xml
<ListView>
    <fullName>Contacted</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Contacted</value>
    </filters>
    <label>Contacted</label>
</ListView>