force-app/main/default/objects/Consultation_Booking__c/listViews/New_Requests.listView-meta.xml
<ListView>
    <fullName>New_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Requests</label>
</ListView>